--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jul 29 19:53:13 BRT 2019
-sdk.dir=/home/licensed/Android/Sdk
+#Wed Jul 31 14:21:54 BRT 2019
+#ndk.dir=/home/licensed/Android/Sdk/ndk-bundle
+sdk.dir=/home/licensed/Android/
